--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-runtime": "6.26.0",
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-sass": "3.3.7",
     "expose-loader": "0.7.4",
+    "lodash": "4.17.5",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
@@ -49,6 +53,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-lodash": "3.3.2",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.6",
     "babel-polyfill": "6.23.0",
@@ -76,6 +81,7 @@
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
     "json-loader": "0.5.4",
+    "lodash-webpack-plugin": "0.11.4",
     "mockdate": "2.0.1",
     "node-sass": "4.5.3",
     "opn-cli": "3.1.0",
@@ -121,6 +127,10 @@
           "react",
           "react-hmre",
           "stage-1"
+        ],
+        "plugins": [
+          "transform-runtime",
+          "transform-object-assign"
         ]
       },
       "production": {
@@ -142,7 +152,8 @@
         ],
         "plugins": [
           "transform-react-constant-elements",
-          "transform-react-remove-prop-types"
+          "transform-react-remove-prop-types",
+          "transform-runtime"
         ]
       },
       "test": {
