--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "assign-deep": "0.4.7",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-runtime": "6.26.0",
