--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-plugin-lodash": "3.3.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.6",
     "babel-polyfill": "6.23.0",
@@ -131,6 +132,7 @@
         ],
         "plugins": [
           "transform-runtime",
+          "transform-class-properties",
           "transform-object-assign"
         ]
       },
@@ -154,7 +156,8 @@
         "plugins": [
           "transform-react-constant-elements",
           "transform-react-remove-prop-types",
-          "transform-runtime"
+          "transform-runtime",
+          "transform-class-properties"
         ]
       },
       "test": {
