--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,14 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-runtime": "6.26.0",
     "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-loader": "2.2.0",
     "bootstrap-sass": "3.3.7",
+    "exports": "0.0.1",
     "expose-loader": "0.7.4",
+    "jquery": "3.3.1",
     "lodash": "4.17.5",
     "object-assign": "4.1.0",
+    "popper.js": "1.12.9",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.5",
