refactor, lodash/fp

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "expose-loader": "0.7.4",
     "jquery": "3.3.1",
     "lodash": "4.17.5",
+    "lodash-fp": "0.10.4",
     "object-assign": "4.1.0",
     "popper.js": "1.12.9",
     "react": "16.2.0",
@@ -87,7 +88,6 @@
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
     "json-loader": "0.5.4",
-    "lodash-webpack-plugin": "0.11.4",
     "mockdate": "2.0.1",
     "node-sass": "4.5.3",
     "opn-cli": "3.1.0",
