--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
     "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watchAll",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
   },
@@ -54,8 +54,8 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
@@ -64,32 +64,32 @@
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.6",
     "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-1": "6.24.1",
-    "browser-sync": "2.18.12",
+    "browser-sync": "2.24.4",
     "chalk": "2.0.1",
     "concurrently": "3.5.0",
     "connect-history-api-fallback": "1.3.0",
-    "coveralls": "2.13.1",
+    "coveralls": "3.0.1",
     "css-loader": "0.28.7",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "eslint": "4.2.0",
-    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-import": "2.12.0",
     "eslint-plugin-react": "7.3.0",
-    "eslint-watch": "3.1.2",
+    "eslint-watch": "3.1.5",
     "extract-text-webpack-plugin": "3.0.1",
     "file-loader": "0.11.2",
     "history": "4.6.0",
     "html-webpack-plugin": "2.29.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "20.0.4",
-    "jest-cli": "20.0.4",
+    "jest-cli": "23.1.0",
     "json-loader": "0.5.4",
     "mockdate": "2.0.1",
-    "node-sass": "4.5.3",
+    "node-sass": "4.9.0",
     "opn-cli": "3.1.0",
     "postcss-loader": "2.0.6",
     "prompt": "1.0.0",
@@ -99,13 +99,13 @@
     "react-test-renderer": "16.0.0",
     "redux-immutable-state-invariant": "2.0.0",
     "redux-mock-store": "1.3.0",
-    "replace": "0.3.0",
+    "replace": "1.0.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
-    "url-loader": "0.5.9",
+    "url-loader": "1.0.1",
     "webpack": "3.1.0",
-    "webpack-bundle-analyzer": "2.8.2",
+    "webpack-bundle-analyzer": "2.13.1",
     "webpack-dev-middleware": "1.11.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-md5-hash": "0.0.5"
