--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "assign-deep": "0.4.7",
+    "axios": "0.18.0",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-runtime": "6.26.0",
@@ -40,6 +41,7 @@
     "exports": "0.0.1",
     "expose-loader": "0.7.4",
     "jquery": "3.3.1",
+    "jsonrequest": "4.2.4",
     "lodash": "4.17.5",
     "lodash-fp": "0.10.4",
     "object-assign": "4.1.0",
