--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "exports": "0.0.1",
     "expose-loader": "0.7.4",
     "jquery": "3.3.1",
+    "js-cookie": "2.2.0",
     "jsonrequest": "4.2.4",
     "lodash": "4.17.5",
     "lodash-fp": "0.10.4",
